content/_generated-doc/3.27/config/quarkus-reactive-db2-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

h|[[quarkus-reactive-db2-client_section_quarkus-datasource]] [.section-name.section-level0]##link:#quarkus-reactive-db2-client_section_quarkus-datasource[Datasources]##
h|Type
h|Default

a| [[quarkus-reactive-db2-client_quarkus-datasource-reactive-db2-ssl]] [.property-path]##link:#quarkus-reactive-db2-client_quarkus-datasource-reactive-db2-ssl[`quarkus.datasource.reactive.db2.ssl`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource.reactive.db2.ssl+++[]
endif::add-copy-button-to-config-props[]


`quarkus.datasource."datasource-name".reactive.db2.ssl`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.datasource."datasource-name".reactive.db2.ssl+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether SSL/TLS is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE_DB2_SSL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE_DB2_SSL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`


|===

